Added second article

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Tea Journ-ea</title>
     </head>
     <body>
         <header>
@@ -12,7 +12,7 @@
                 <li><a href="#coffee">The Reign of Coffee</a></li>
                 <li><a href="#looseleaf">Loosening Up</a></li>
                 <li><a href="#matcha">Finding My Match-a</a></li>
-                <li><a href="#gongfu"></a>Gong Fu Master</li>
+                <li><a href="#gongfu">Gong Fu Master</a></li>
                 <li><a href="#present">A Whole New World (of Tea)</a></li>
             </ul>
             </nav>
@@ -29,17 +29,34 @@
                         in the microwave (for one minute) and add roughly 25-50% cold milk, and almost
                         as much granulated sugar.
                     </p>
-                    <figure>
-                        <img src="/images/teabag.jpg" 
-                        alt="Illustration of teabag in a hot cup of leaf-water">
-                    </figure>
+                    <img src="/images/teabag.jpg" alt="Illustration of teabag in a hot cup of leaf-water">
                     <p>
-
+                        I dabbled with other types--ginger to ease the stomach, green for a light taste, and various other fruit infused varieties.
+                        But, for the first part of my life, when I thought of tea, I imagined the taste of sugary, milky earl grey. They were
+                        simpler times.
                     </p>
                 </section>
                 <section>
+                    <a name="coffee"></a>
+                    <h2>The Reign of Coffee</h2>
+                    <p>
+                        Beginning sometime around age 18, I was introduced to the miraculous wonders of the coffee bean. While coffee is certainly
+                        <b>not</b> tea, I would consider it a stop on my "voyage" into tea. I began with sugared up Starbucks concoctions, but
+                        gradually descended into home brewing--the deeper I descended, my cups slowly turned darker and darker, till I was drinking
+                        pure, unadulturated black bean water (which is still my preference). Eventually I found myself making americanos with
+                        an <a href="https://aeropressinc.com/aeropress/">Aeropress</a> every morning before work.
+                        Coffee holds a special place in my heart, but I've found that it is quite the double-edged sword. Caffeine
+                         dependency is no joke. I found myself relying too much on its abilities to wake me up, so I decided to take a break and 
+                        pursue other, less potent forms of alertness enablers.
+                    </p>
+                    <figure>
+                        <img src="/images/coffee-maker.jpg" alt="Bronze casted cappucino machine">
+                        <figcaption>It never got this far...but I could, at one point, see this in my future</figcaption>
+                    </figure>
+                </section>
+                <section>
                     <a name="looseleaf"></a>
-                    <h2>Fayetteville, AK</h2>
+                    <h2>Loosening Up</h2>
                     <p>
                         
                     </p>
@@ -50,7 +67,7 @@
                 </section>
                 <section>
                     <a name="matcha"></a>
-                    <h2>Atlanta, GA</h2>
+                    <h2>Finding My Match-a</h2>
                     <p>
 
                     </p>
@@ -61,7 +78,7 @@
                 </section>
                 <section>
                     <a name="gongfu"></a>
-                    <h2>Denver, CO</h2>
+                    <h2>Gong Fu Master</h2>
                     <p>
                     </p>
                     <figure>
@@ -71,7 +88,7 @@
                 </section>
                 <section>
                     <a name="present"></a>
-                    <h2>Kansas City, MO</h2>
+                    <h2>A Whole New World (of Tea)</h2>
                     <p>
                     </p>
                     <figure>
