Fixed image links

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         in the microwave (for one minute) and add roughly 25-50% cold milk, and almost
                         as much granulated sugar.
                     </p>
-                    <img src="/images/teabag.jpg" alt="Illustration of teabag in a hot cup of leaf-water">
+                    <img src="images/teabag.jpg" alt="Illustration of teabag in a hot cup of leaf-water">
                     <p>
                         I dabbled with other types--ginger to ease the stomach, green for a light taste, and various other fruit infused varieties.
                         But, for the first part of my life, when I thought of tea, I imagined the taste of sugary, milky earl grey. They were
@@ -50,7 +50,7 @@
                         pursue other, less potent forms of alertness enablers.
                     </p>
                     <figure>
-                        <img src="/images/coffee-maker.jpg" alt="Bronze casted cappucino machine">
+                        <img src="images/coffee-maker.jpg" alt="Bronze casted cappucino machine">
                         <figcaption>It never got this far...but I could, at one point, see this in my future</figcaption>
                     </figure>
                 </section>
