added third article and loose-leaf image

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                     <p>
                         Beginning sometime around age 18, I was introduced to the miraculous wonders of the coffee bean. While coffee is certainly
                         <b>not</b> tea, I would consider it a stop on my "voyage" into tea. I began with sugared up Starbucks concoctions, but
-                        gradually descended into home brewing--the deeper I descended, my cups slowly turned darker and darker, till I was drinking
-                        pure, unadulturated black bean water (which is still my preference). Eventually I found myself making americanos with
+                        gradually descended into home brewing--the deeper I descended, the darker my cups turned, until I was drinking
+                        pure, unadulturated, black bean water (which is still my preference). Eventually I found myself making americanos with
                         an <a href="https://aeropressinc.com/aeropress/">Aeropress</a> every morning before work.
                         Coffee holds a special place in my heart, but I've found that it is quite the double-edged sword. Caffeine
                          dependency is no joke. I found myself relying too much on its abilities to wake me up, so I decided to take a break and 
@@ -58,11 +58,22 @@
                     <a name="looseleaf"></a>
                     <h2>Loosening Up</h2>
                     <p>
-                        
+                        I took some time off coffee and explored other avenues of caffeine administration. I stumbled across
+                        an old ball diffuser I had received as a gift a few years prior, and looked into loose leaf teas.
+                        I tried a few black teas, hoping for a higher caffeine content over greens and tisanes (tea-talk for fruit infusions). 
+                        After browsing several local stores,
+                        I found a few brands I liked, and a few I didn't (looking at you, Lipton). Eventually, I took my shopping 
+                        online and found some excellent brands (shout-out to <a href="http://www.uptontea.com/">Upton Tea Imports</a>).
+                        Earl Grey was a mainstay for a while, but I also explored teas from Yunnan and Darjeeling. I began to wonder where
+                        all these fancy names came from! After some researching, I unearthed a wealth of internet knowledge
+                        regarding different tea locales, along with various forms of "oxidation"--whatever that meant. I continued
+                        to explore these different origins, though stuck entirely to black/highly oxidized leaves. Eventually I evolved 
+                        from the ball diffuser to a rustic tea pot, which allows the leaves to breathe more and diffuse more 
+                        elegant flavors. But my obsession with the sacred shrub was only beginning.
                     </p>
                     <figure>
-                        <img>
-                        <figcaption></figcaption>
+                        <img src="images/loose-leaf.png" alt="Loose leaf tea next to an opened ball diffuser">
+                        <figcaption>Turns out these infuser balls significantly inhibit the flavor of high quality teas</figcaption>
                     </figure>
                 </section>
                 <section>
