Added sub-header and chapter numbers in nav

--- a/index.html
+++ b/index.html
@@ -6,21 +6,22 @@
     <body>
         <header>
             <h1>Tea Journ-ea</h1>
+            <h2>A Story of Evolving Taste</h2>
             <nav>
                 <ul>
-                <li><a href="#early_years">Tea Bagging</a></li>
-                <li><a href="#coffee">The Reign of Coffee</a></li>
-                <li><a href="#looseleaf">Loosening Up</a></li>
-                <li><a href="#matcha">Finding My Match-a</a></li>
-                <li><a href="#gongfu">Gong Fu Master</a></li>
-                <li><a href="#present">A Whole New World (of Tea)</a></li>
+                <li>Chapter I<a href="#early-years">Tea Bagging</a></li>
+                <li>Chapter II<a href="#coffee">The Reign of Coffee</a></li>
+                <li>Chapter III<a href="#looseleaf">Loosening Up</a></li>
+                <li>Chapter IV<a href="#matcha">Finding My Match-a</a></li>
+                <li>Chapter V<a href="#gongfu">Gong Fu Master</a></li>
+                <li>Chapter VI<a href="#present">A Whole New World (of Tea)</a></li>
             </ul>
             </nav>
         </header>
         <main>
             <article>
                 <section>
-                    <a name="early_years"></a>
+                    <a name="early-years"></a>
                     <h2>Tea Bagging</h2>
                     <p>
                         Since a young age, I have enjoyed the fruits of the revered herb <em>Camellia Sinensis</em>.
@@ -32,6 +33,7 @@
                     <img src="images/teabag.jpg" alt="Illustration of teabag in a hot cup of leaf-water">
                     <p>
                         I dabbled with other types--ginger to ease the stomach, green for a light taste, and various other fruit infused varieties.
+                        I recall often enjoying iced black tea on many a hot summer day (again, profusely sweetened.)
                         But, for the first part of my life, when I thought of tea, I imagined the taste of sugary, milky earl grey. They were
                         simpler times.
                     </p>
@@ -68,7 +70,7 @@
                         all these fancy names came from! After some researching, I unearthed a wealth of internet knowledge
                         regarding different tea locales, along with various forms of "oxidation"--whatever that meant. I continued
                         to explore these different origins, though stuck entirely to black/highly oxidized leaves. Eventually I evolved 
-                        from the ball diffuser to a rustic tea pot, which allows the leaves to breathe more and diffuse more 
+                        from the ball diffuser to a rustic tea pot, which allows the leaves to breathe and diffuse more 
                         elegant flavors. But my obsession with the sacred shrub was only beginning.
                     </p>
                     <figure>
