added fourth article, with matcha image

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li>Chapter IV<a href="#matcha">Finding My Match-a</a></li>
                 <li>Chapter V<a href="#gongfu">Gong Fu Master</a></li>
                 <li>Chapter VI<a href="#present">A Whole New World (of Tea)</a></li>
-            </ul>
+                </ul>
             </nav>
         </header>
         <main>
@@ -82,11 +82,21 @@
                     <a name="matcha"></a>
                     <h2>Finding My Match-a</h2>
                     <p>
-
+                        Matcha. This delectable powdered marvel played a key role in expanding my concept of tea. Matcha consists
+                        of finely ground young green tea leaves, which are then added to hot water and wisked in a bowl to form a
+                        thick, frothy tea soup. It contains high levels of theanine, and a moderate amount of caffeine, which, in unison,
+                        produce a clear-headed, zen-like energy boost. While a delightful warm beverage, what makes it most significant
+                        to me is how it awakened me to the existence of "tea culture". This particular type of tea has
+                        a long history in Japanese culture. There are matcha ceremonies, in which "tea masters" brew high quality
+                        tea using techniques and rituals that have been honed for several generations, in a custom that has its
+                        base in both Tao and Buddhist traditions. I then discovered that there were other "tea cultures"--in fact,
+                        almost every country or region has their own! As my fascination became an obsession, I turned my eyes toward
+                        inland Asia, to China, whose history with tea is thought to go back as far as 2700 BC. In doing so, I discovered
+                        the art of gong fu.
                     </p>
                     <figure>
-                        <img>
-                        <figcaption></figcaption>
+                        <img src="images/matcha.jpg" alt="A fresh brewed bowl of matcha, along with the bamboo wisk, teaspoon, and the raw green powder">
+                        <figcaption>A freshly brewed bowl of matcha--the frothy head indicates high quality materials</figcaption>
                     </figure>
                 </section>
                 <section>
