--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Tea Journ-ea</title>
+        <link rel="stylesheet" type="text/css" href="main.css">
     </head>
     <body>
         <header>
@@ -83,7 +84,7 @@
                     <h2>Finding My Match-a</h2>
                     <p>
                         Matcha. This delectable powdered marvel played a key role in expanding my concept of tea. Matcha consists
-                        of finely ground young green tea leaves, which are then added to hot water and wisked in a bowl to form a
+                        of finely ground young green tea leaves, which are then added to hot water and whisked in a bowl to form a
                         thick, frothy tea soup. It contains high levels of theanine, and a moderate amount of caffeine, which, in unison,
                         produce a clear-headed, zen-like energy boost. While a delightful warm beverage, what makes it most significant
                         to me is how it awakened me to the existence of "tea culture". This particular type of tea has
@@ -95,8 +96,8 @@
                         the art of gong fu.
                     </p>
                     <figure>
-                        <img src="images/matcha.jpg" alt="A fresh brewed bowl of matcha, along with the bamboo wisk, teaspoon, and the raw green powder">
-                        <figcaption>A freshly brewed bowl of matcha--the frothy head indicates high quality materials</figcaption>
+                        <img src="images/matcha.jpg" alt="A fresh brewed bowl of matcha, along with the bamboo whisk, teaspoon, and the raw green powder">
+                        <figcaption>A freshly whisked bowl of matcha--the frothy head indicates high quality materials</figcaption>
                     </figure>
                 </section>
                 <section>
