Added more css--all text, margins/alignment, sizing, colors

--- a/index.html
+++ b/index.html
@@ -9,14 +9,26 @@
             <h1>Tea Journ-ea</h1>
             <h2>A Story of Evolving Taste</h2>
             <nav>
-                <ul>
-                <li>Chapter I<a href="#early-years">Tea Bagging</a></li>
-                <li>Chapter II<a href="#coffee">The Reign of Coffee</a></li>
-                <li>Chapter III<a href="#looseleaf">Loosening Up</a></li>
-                <li>Chapter IV<a href="#matcha">Finding My Match-a</a></li>
-                <li>Chapter V<a href="#gongfu">Gong Fu Master</a></li>
-                <li>Chapter VI<a href="#present">A Whole New World (of Tea)</a></li>
-                </ul>
+                <div>
+                    <ul>
+                        <li>Chapter I</li>
+                        <li>Chapter II</li>
+                        <li>Chapter III</li>
+                        <li>Chapter IV</li>
+                        <li>Chapter V</li>
+                        <li>Chapter VI</li>
+                </div>
+                <div id="chapter-titles">
+                    <ul>
+                        <li><a href="#early-years">Tea Bagging</a></li>
+                        <li><a href="#coffee">The Reign of Coffee</a></li>
+                        <li><a href="#looseleaf">Loosening Up</a></li>
+                        <li><a href="#matcha">Finding My Match-a</a></li>
+                        <li><a href="#gongfu">Gong Fu Master</a></li>
+                        <li><a href="#present">A Whole New World (of Tea)</a></li>
+                    </ul>
+                </div>
+                
             </nav>
         </header>
         <main>
@@ -25,7 +37,7 @@
                     <a name="early-years"></a>
                     <h2>Tea Bagging</h2>
                     <p>
-                        Since a young age, I have enjoyed the fruits of the revered herb <em>Camellia Sinensis</em>.
+                            Since a young age, I have enjoyed the fruits of the revered herb <em>Camellia Sinensis</em>.
                         Up until age 20, I knew it only as the crushed-up leaves in a piece of folded-up and stapled 
                         filter paper (tea bag). My first favorite tea was the ever-popular Earl Grey, which I would brew in a coffee cup
                         in the microwave (for one minute) and add roughly 25-50% cold milk, and almost
@@ -33,7 +45,7 @@
                     </p>
                     <img src="images/teabag.jpg" alt="Illustration of teabag in a hot cup of leaf-water">
                     <p>
-                        I dabbled with other types--ginger to ease the stomach, green for a light taste, and various other fruit infused varieties.
+                            I dabbled with other types--ginger to ease the stomach, green for a light taste, and various other fruit infused varieties.
                         I recall often enjoying iced black tea on many a hot summer day (again, profusely sweetened.)
                         But, for the first part of my life, when I thought of tea, I imagined the taste of sugary, milky earl grey. They were
                         simpler times.
@@ -43,7 +55,7 @@
                     <a name="coffee"></a>
                     <h2>The Reign of Coffee</h2>
                     <p>
-                        Beginning sometime around age 18, I was introduced to the miraculous wonders of the coffee bean. While coffee is certainly
+                            Beginning sometime around age 18, I was introduced to the miraculous wonders of the coffee bean. While coffee is certainly
                         <b>not</b> tea, I would consider it a stop on my "voyage" into tea. I began with sugared up Starbucks concoctions, but
                         gradually descended into home brewing--the deeper I descended, the darker my cups turned, until I was drinking
                         pure, unadulturated, black bean water (which is still my preference). Eventually I found myself making americanos with
