added tab spacing to first line of paragraphs

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <a name="early-years"></a>
                     <h2>Tea Bagging</h2>
                     <p>
-                            Since a young age, I have enjoyed the fruits of the revered herb <em>Camellia Sinensis</em>.
+                            &emsp;Since a young age, I have enjoyed the fruits of the revered herb <em>Camellia Sinensis</em>.
                         Up until age 20, I knew it only as the crushed-up leaves in a piece of folded-up and stapled 
                         filter paper (tea bag). My first favorite tea was the ever-popular Earl Grey, which I would brew in a coffee cup
                         in the microwave (for one minute) and add roughly 25-50% cold milk, and almost
@@ -45,7 +45,7 @@
                     </p>
                     <img src="images/teabag.jpg" alt="Illustration of teabag in a hot cup of leaf-water">
                     <p>
-                            I dabbled with other types--ginger to ease the stomach, green for a light taste, and various other fruit infused varieties.
+                            &emsp;I dabbled with other types--ginger to ease the stomach, green for a light taste, and various other fruit infused varieties.
                         I recall often enjoying iced black tea on many a hot summer day (again, profusely sweetened.)
                         But, for the first part of my life, when I thought of tea, I imagined the taste of sugary, milky earl grey. They were
                         simpler times.
@@ -55,7 +55,7 @@
                     <a name="coffee"></a>
                     <h2>The Reign of Coffee</h2>
                     <p>
-                            Beginning sometime around age 18, I was introduced to the miraculous wonders of the coffee bean. While coffee is certainly
+                            &emsp;Beginning sometime around age 18, I was introduced to the miraculous wonders of the coffee bean. While coffee is certainly
                         <b>not</b> tea, I would consider it a stop on my "voyage" into tea. I began with sugared up Starbucks concoctions, but
                         gradually descended into home brewing--the deeper I descended, the darker my cups turned, until I was drinking
                         pure, unadulturated, black bean water (which is still my preference). Eventually I found myself making americanos with
@@ -73,7 +73,7 @@
                     <a name="looseleaf"></a>
                     <h2>Loosening Up</h2>
                     <p>
-                        I took some time off coffee and explored other avenues of caffeine administration. I stumbled across
+                            &emsp;I took some time off coffee and explored other avenues of caffeine administration. I stumbled across
                         an old ball diffuser I had received as a gift a few years prior, and looked into loose leaf teas.
                         I tried a few black teas, hoping for a higher caffeine content over greens and tisanes (tea-talk for fruit infusions). 
                         After browsing several local stores,
@@ -83,7 +83,7 @@
                         all these fancy names came from! After some researching, I unearthed a wealth of internet knowledge
                         regarding different tea locales, along with various forms of "oxidation"--whatever that meant. I continued
                         to explore these different origins, though stuck entirely to black/highly oxidized leaves. Eventually I evolved 
-                        from the ball diffuser to a rustic tea pot, which allows the leaves to breathe and diffuse more 
+                        from the ball diffuser to a rustic tea pot, which allowed the leaves to breathe and diffuse more 
                         elegant flavors. But my obsession with the sacred shrub was only beginning.
                     </p>
                     <figure>
@@ -95,7 +95,7 @@
                     <a name="matcha"></a>
                     <h2>Finding My Match-a</h2>
                     <p>
-                        Matcha. This delectable powdered marvel played a key role in expanding my concept of tea. Matcha consists
+                            &emsp;Matcha. This delectable powdered marvel played a key role in expanding my concept of tea. Matcha consists
                         of finely ground young green tea leaves, which are then added to hot water and whisked in a bowl to form a
                         thick, frothy tea soup. It contains high levels of theanine, and a moderate amount of caffeine, which, in unison,
                         produce a clear-headed, zen-like energy boost. While a delightful warm beverage, what makes it most significant
@@ -116,6 +116,7 @@
                     <a name="gongfu"></a>
                     <h2>Gong Fu Master</h2>
                     <p>
+                            &emsp;
                     </p>
                     <figure>
                         <img>
@@ -126,6 +127,7 @@
                     <a name="present"></a>
                     <h2>A Whole New World (of Tea)</h2>
                     <p>
+                            &emsp;
                     </p>
                     <figure>
                         <img>
