changed css; font size, added to nav, image size

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
             <nav>
                 <div>
                     <ul>
-                        <li>Chapter I</li>
-                        <li>Chapter II</li>
-                        <li>Chapter III</li>
-                        <li>Chapter IV</li>
-                        <li>Chapter V</li>
-                        <li>Chapter VI</li>
+                        <a href="#early-years"><li>Chapter I</li></a>
+                        <a href="#coffee"><li>Chapter II</li></a>
+                        <a href="#looseleaf"><li>Chapter III</li></a>
+                        <a href="#matcha"><li>Chapter IV</li></a>
+                        <a href="#gongfu"><li>Chapter V</li></a>
+                        <a href="#present"><li>Chapter VI</li></a>
                 </div>
                 <div id="chapter-titles">
                     <ul>
-                        <li><a href="#early-years">Tea Bagging</a></li>
-                        <li><a href="#coffee">The Reign of Coffee</a></li>
-                        <li><a href="#looseleaf">Loosening Up</a></li>
-                        <li><a href="#matcha">Finding My Match-a</a></li>
-                        <li><a href="#gongfu">Gong Fu Master</a></li>
-                        <li><a href="#present">A Whole New World (of Tea)</a></li>
+                        <a href="#early-years"><li>Tea Bagging</li></a>
+                        <a href="#coffee"><li>The Reign of Coffee</li></a>
+                        <a href="#looseleaf"><li>Loosening Up</li></a>
+                        <a href="#matcha"><li>Finding My Match-a</li></a>
+                        <a href="#gongfu"><li>Gong Fu Master</li></a>
+                        <a href="#present"><li>A Whole New World (of Tea)</li></a>
                     </ul>
                 </div>
                 
