finished adding content, finalized css with color scheme and edited text decoration

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     </head>
     <body>
         <header>
+            <a name="top-of-page"></a>
             <h1>Tea Journ-ea</h1>
-            <h2>A Story of Evolving Taste</h2>
+            <h2 class="tagline">A Story of Evolving Taste</h2>
             <nav>
                 <div>
                     <ul>
@@ -18,7 +19,7 @@
                         <a href="#gongfu"><li>Chapter V</li></a>
                         <a href="#present"><li>Chapter VI</li></a>
                 </div>
-                <div id="chapter-titles">
+                <div class="chapter-titles">
                     <ul>
                         <a href="#early-years"><li>Tea Bagging</li></a>
                         <a href="#coffee"><li>The Reign of Coffee</li></a>
@@ -116,23 +117,48 @@
                     <a name="gongfu"></a>
                     <h2>Gong Fu Master</h2>
                     <p>
-                            &emsp;
+                            &emsp;My research on tea rituals quickly turned up results for a curious method of brewing tea
+                            called 'Gongfu'. This type of brewing is different from the western style, which uses high temperatures
+                            and longer steeping times (which yields a more bitter product, hence the heavy use of sweetener being
+                            a common practice). It relies on using smaller amounts of tea and water, using several shorter steeps.
+                            The result is a naturally sweeter, more complex flavor. Upon reading of this brewing style, I knew I
+                            had to try it, so I procured myself a cheap 'Gaiwan', and bought some samples of a strong fermented tea called
+                            Pu'er (pronounced pOO-air). When all the goods arrived, I was eager to try it out...and the results were astounding!
+                            The tea had flavors I had never tasted before, and the mental effects from the unique blend of over 200 effective
+                            psychoactive molecules present in the leaves was shocking. At higher temperatures, many of these compounds break down,
+                            but at the lower temperatures they are easily metabolized by the body. This was better than coffee, and, after
+                            some experimentation, I found that frequent usage did not result in the same dependency effect that occured
+                            with coffee (no headaches or tiredness when abstaining).
                     </p>
                     <figure>
-                        <img>
-                        <figcaption></figcaption>
+                        <img src="images/gaiwan.jpg" alt="An expensive looking gongfu tea set up, featuring a gaiwan, fairness pitcher, and several tea cups">
+                        <figcaption>There are a lot of small pieces of hardware required for gonfu brewing. This is a full set of all required equipment</figcaption>
                     </figure>
+                    <p>
+                            &emsp;In Chinese culture, the act of brewing the tea is as significant as the drink it produces. To brew
+                            in such a way requires focus, precision, and a sort of scientific curiosity, a willingness to try out new
+                            things that may influence what flavors end up in your cup. This is where I fell in love. No two cups
+                            are the same, even in the same brewing session. Small changes (allowing to steep 5 more seconds, or 5&deg; cooler)
+                            yield a different flavor. The act of brewing becomes a form of moving meditation. Those first few weeks
+                            of discovering what worked and what did not were an exciting time!
+                    </p>
                 </section>
                 <section>
                     <a name="present"></a>
                     <h2>A Whole New World (of Tea)</h2>
                     <p>
-                            &emsp;
+                            &emsp;This brings us to present day! Most mornings, my routine involves waking up about 30 minutes earlier
+                            to give myself time to enjoy a good gongfu session. I have found that it brings a sort of tranquility to 
+                            my day, and encourages a state of mindfulness. Since that first sample pack of Pu'er, I have branched out to
+                            other teas intended for gongfu brewing, including oolong, white, various strong green teas. I am currently
+                            working my way through a pack of sencha, which is a green tea that is very popular in Japan. My experiences
+                            with tea bring me such joy, and I look forward to what discoveries I will make in the future!
                     </p>
                     <figure>
-                        <img>
-                        <figcaption></figcaption>
+                        <img src="images/tea-tree.jpg" alt="A typical tea tree">
+                        <figcaption>How can such a simple bush be so fascinating?</figcaption>
                     </figure>
+                    <p id="link-to-top"><a href="#top-of-page">Click here to return to top of page</a></p>
                 </section>
             </article>
         </main>
