--- a/index.html
+++ b/index.html
@@ -158,9 +158,12 @@
                         <img src="images/tea-tree.jpg" alt="A typical tea tree">
                         <figcaption>How can such a simple bush be so fascinating?</figcaption>
                     </figure>
-                    <p id="link-to-top"><a href="#top-of-page">Click here to return to top of page</a></p>
+                    
                 </section>
             </article>
         </main>
+        <footer>
+            <p id="link-to-top"><a href="#top-of-page">Click here to return to top of page</a></p>
+        </footer>
     </body>
 </html>
